# Neo4J

./: .gitignore  README.md  pyproject.toml
docs/: plan_grafos_embeddings.md  validation_corpus_oracle.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
graphify-out/: GRAPH_REPORT.md  GRAPH_TREE.html  graph.html  graph.json  manifest.json
graphify-out/2026-06-17/: GRAPH_REPORT.md  graph.json  manifest.json
requerimientos/: 00_contexto_general.md  01_alcance_inicial.md  01_contexto_inicial.md  02_alcance_y_arquitectura.md  02_objetivo_graphrag.md  03_documentos_iniciales.md  03_flujo_y_modelo.md  04_arquitectura_inicial.md  04_modelos_y_costos.md  05_consumo_recursos.md  06_flujo_procesamiento.md  07_modelo_grafo.md  08_uso_llm_externo.md  09_modelo_llm.md  10_modelo_embeddings.md  11_control_costos_ia.md  12_estrategia_modelos.md  13_plan_interfaz_web.md  14_arquitectura_interfaz_web.md  README.md  prtpreguntas.md
scripts/: refresh_graphify.sh  run_validation_corpus.sh  run_validation_cycle.sh  stage_graphify.sh
src/neo4j_graphrag/: __init__.py  api.py  cli.py  config.py  connectors.py  embeddings.py  extract.py  ingest.py  job_store.py  models.py  openrouter.py  retrieval.py  store.py
src/neo4j_graphrag.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_api.py  test_doctor.py  test_extract.py  test_healthcheck.py  test_index.py  test_ingest.py  test_job_store.py  test_pipeline.py  test_probe.py  test_retrieval.py  test_store.py  test_validation_corpus.py
