[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "neo4j-graphrag"
version = "0.1.0"
description = "GraphRAG scaffold with Neo4j and Qdrant"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
neo4j-graphrag = "neo4j_graphrag.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
